--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
 *{
     margin: 0px;
     padding: 0px;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 header{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
+
 
 .navegacion ul {
   list-style: none;
@@ -39,21 +45,23 @@ header{
 .submenu {
     position: absolute;
     border-radius: 5%;
-    background-color: rgba(107, 107, 107, 0.541);
+    background-color: rgba(107, 107, 107, 0.842);
     width: 120%;
     visibility: hidden;
     opacity: 0;
     transition: opacity 1s;
+    z-index: 1000;
 }
 .subsubmenu {
     position: absolute;
-    background-color: rgba(107, 107, 107, 0.541);
+    background-color: rgba(107, 107, 107, 0.795);
     border-radius: 5%;
     visibility: hidden;    
     opacity: 0;
     transition: opacity 1s;  
     margin-left: 175px;
     margin-top: -48px;
+    z-index: 1000;
 }
 
 .subsubmenu > li > a {
@@ -91,13 +99,51 @@ a:hover::before {
 img{
     height: 10vw;
     padding: 10px;
+
    }
 
    .menu li:hover .submenu {
     visibility: visible;
     opacity: 1;
    }
+
    .submenu li:hover .subsubmenu {
     visibility: visible;
     opacity: 1;
    }
+
+
+
+
+   @media screen and (max-width: 768px) {
+    .menu {
+        display: block;
+        flex-direction: column;
+        background-color: #940303;
+        position: fixed;
+        top: 60px;
+        left: 0;
+        right: 0;
+        z-index: 1;
+    }
+
+    .menu.active {
+        display: flex;
+    }
+
+    .menu li {
+        margin: 10px 0;
+    }
+   
+    .nav-toggle {
+        display: block;
+        cursor: pointer;
+    }
+
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: #fff;
+        margin: 5px 0;
+    }
+}
