--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ header {
 .container {
     display: flex;
     align-items: center;
-    margin: 0%;
 }
 
 img {
@@ -77,6 +76,7 @@ img:hover {
     transition: all 0.3s ease;
     position: relative;
     overflow: hidden;
+    text-align: center;
 }
 .menu li:hover .submenu {
     visibility: visible;
@@ -98,10 +98,12 @@ img:hover {
 }
 .submenu>li>a {
     display: block;
-    padding: 15px;
+    padding: 5px;
+    margin: 20px;
     color: white;
     font-family: 'Courier New', Courier, monospace;
     text-decoration: none;
+    text-align: center;
 }
 .submenu li:hover .subsubmenu {
     visibility: visible;
@@ -124,11 +126,12 @@ img:hover {
 }
 .subsubmenu>li>a {
     display: block;
-    padding: 15px;
+    padding: 5px;
+    margin: 15px;
     color: white;
     font-family: 'Courier New', Courier, monospace;
     text-decoration: none;
-
+    text-align: center;
 }
 /* Fin de código SubSubMenú */
 
@@ -147,10 +150,12 @@ img:hover {
 }
 .menuPerros>li>a {
     display: block;
-    padding: 15px;
+    padding: 5px;
+    margin: 15px;
     color: white;
     font-family: 'Courier New', Courier, monospace;
     text-decoration: none;
+    text-align: center;
 }
 #Perros:hover .menuPerros {
     visibility: visible;
@@ -173,10 +178,12 @@ img:hover {
 }
 .menuGatos>li>a {
     display: block;
-    padding: 15px;
+    padding: 5px;
+    margin: 15px;
     color: white;
     font-family: 'Courier New', Courier, monospace;
     text-decoration: none;
+    text-align: center;
 }
 #Gatos:hover .menuGatos {
     visibility: visible;
@@ -184,25 +191,16 @@ img:hover {
 }
 /* Fin de código MenúGatos */
 
-.menu>li>a,
-.submenu>li>a,
-.subsubmenu>li>a,
-.menuPerros>li>a,
-.menuGatos>li>a {
+.menu li a {
     position: relative;
     text-decoration: none;
-    text-align: center;
 }
 
-.menu>li>a::after,
-.submenu>li>a::after,
-.subsubmenu>li>a::after,
-.menuPerros>li>a::after,
-.menuGatos>li>a::after {
+.menu li a::after {
     content: "";
     position: absolute;
     left: 15%;
-    bottom: -2px;
+    bottom: 0px;
     width: 70%;
     height: 2px;
     background-color: #c50000;
@@ -211,14 +209,9 @@ img:hover {
     transition: transform 0.3s ease;
 }
 
-.menu>li>a:hover::after,
-.submenu>li>a:hover::after,
-.subsubmenu>li>a:hover::after,
-.menuPerros>li>a:hover::after,
-.menuGatos>li>a:hover::after {
+.menu li a:hover::after {
     transform: scaleX(1);
 }
-
 
 
 @media screen and (max-width: 768px) {
