--- a/style.css
+++ b/style.css
@@ -6,11 +6,9 @@
     box-sizing: border-box;
 }
 
-
-
 header {
     display: flex;
-    flex-direction: column;
+    flex-direction: column;    
 }
 
 .container {
@@ -18,14 +16,23 @@ header {
     align-items: center;
 }
 
-img {
-    height: 8vw;
+.logo {
+    height: 7vw;
     margin-top: 0.5vw;
+    margin-left: 5vw;
     padding: 10px;
     transition: 0.8s;
 }
-img:hover {
-    height: 8.4vw;
+.nav-toggle {
+  color: rgb(8, 85, 156);
+   background: none;
+   border: none;
+   font-size: 30px;
+   padding: 0 20px;
+   line-height: 30px;
+   cursor: pointer;
+
+   display: none;
 }
 
 #buscador {
@@ -35,15 +42,21 @@ img:hover {
     width: 35vw;
     height: 2.5vw;
     border: #94030362 2px solid;
-    border-radius: 50px;
-    font-family: 'Courier New', Courier, monospace;
+    border-radius: 50px;    
     padding: 10px;
+    font-size: 1vw;
+    font-family: "Century Gothic",Verdana,sans-serif;
 }
 
-
-::placeholder {
-    padding: 3px;
+::placeholder{
+    padding: 0.1vw;
     color: gray;
+    font-size: 1vw;
+    font-family: "Century Gothic",Verdana,sans-serif;
+    background-image: url(assets/search-interface-symbol\ \(1\).png);    
+    background-size: 1.2vw 1.2vw;
+    background-repeat: no-repeat;
+    background-position: right;
 }
 
 .navegacion ul {
@@ -53,13 +66,15 @@ img:hover {
 
 /* Menú */
 .menu {
-    padding-top: 2vw;
+    padding: 0.5vw;
     display: flex;
     justify-content: space-evenly;
+    background-color: #035394;
 }
 .menu>li {
     position: relative;
     display: inline-block;
+    margin-top: 0.5vw;
 }
 .menu>li>a {
     display: block;
@@ -68,11 +83,11 @@ img:hover {
     margin-left: 2vw;
     margin-bottom: 0.5vw;
     text-decoration: none;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Century Gothic",Verdana,sans-serif;
+    font-size: 1vw;
     font-weight: bold;
-    font-size: 1.2vw;
     border-radius: 20px;
-    color: #065581;
+    color: white;
     transition: all 0.3s ease;
     position: relative;
     overflow: hidden;
@@ -87,9 +102,8 @@ img:hover {
 
 /* SubMenú */
 .submenu {
-    position: absolute;
-    border-radius: 5%;
-    background-color: rgba(107, 107, 107, 0.842);
+    position: absolute;    
+    background-color:#035394;
     width: 110%;
     visibility: hidden;
     opacity: 0;
@@ -98,10 +112,13 @@ img:hover {
 }
 .submenu>li>a {
     display: block;
-    padding: 5px;
-    margin: 20px;
+    padding: 0.2vw;
+    padding-bottom: 0.5vw;
+    margin: 1.5vw;   
     color: white;
-    font-family: 'Courier New', Courier, monospace;
+    font-size: 1vw;
+    font-weight: bold;
+    font-family: "Century Gothic",Verdana,sans-serif;
     text-decoration: none;
     text-align: center;
 }
@@ -115,8 +132,7 @@ img:hover {
 /* SubSubMenú */
 .subsubmenu {
     position: absolute;
-    background-color: rgba(107, 107, 107, 0.795);
-    border-radius: 5%;
+    background-color: #035394;   
     visibility: hidden;
     opacity: 0;
     transition: opacity 1s;
@@ -126,10 +142,13 @@ img:hover {
 }
 .subsubmenu>li>a {
     display: block;
-    padding: 5px;
-    margin: 15px;
+    font-size: 1vw;
+    font-weight: bold;
+    padding: 0.2vw;
+    padding-bottom: 0.5vw;
+    margin: 1.5vw;
     color: white;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Century Gothic",Verdana,sans-serif;
     text-decoration: none;
     text-align: center;
 }
@@ -139,8 +158,7 @@ img:hover {
 /* MenúPerros */
 .menuPerros {
     position: absolute;
-    background-color: rgba(107, 107, 107, 0.795);
-    border-radius: 5%;
+    background-color: #035394;   
     visibility: hidden;
     opacity: 0;
     transition: opacity 1s;
@@ -150,10 +168,13 @@ img:hover {
 }
 .menuPerros>li>a {
     display: block;
-    padding: 5px;
-    margin: 15px;
+    font-size: 1vw;
+    font-weight: bold;
+    padding: 0.2vw;
+    padding-bottom: 0.5vw;
+    margin: 1.5vw;
     color: white;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Century Gothic",Verdana,sans-serif;
     text-decoration: none;
     text-align: center;
 }
@@ -167,8 +188,7 @@ img:hover {
 /* MenúGatos */
 .menuGatos {
     position: absolute;
-    background-color: rgba(107, 107, 107, 0.795);
-    border-radius: 5%;
+    background-color:#035394;    
     visibility: hidden;
     opacity: 0;
     transition: opacity 1s;
@@ -178,10 +198,13 @@ img:hover {
 }
 .menuGatos>li>a {
     display: block;
-    padding: 5px;
-    margin: 15px;
+    font-size: 1vw;
+    font-weight: bold;
+    padding: 0.2vw;
+    padding-bottom: 0.5vw;
+    margin: 1.5vw;   
     color: white;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "Century Gothic",Verdana,sans-serif;
     text-decoration: none;
     text-align: center;
 }
@@ -203,7 +226,7 @@ img:hover {
     bottom: 0px;
     width: 70%;
     height: 2px;
-    background-color: #c50000;
+    background-color: #ffffff;
     transform: scaleX(0);
     transform-origin: center;
     transition: transform 0.3s ease;
@@ -213,44 +236,95 @@ img:hover {
     transform: scaleX(1);
 }
 
+section{
+    display: flex;
+    justify-content: center;
+
+}
+.imagenBanner {
+    width: 40%;       
+}
+
+
 
 @media screen and (max-width: 768px) {
-    img {
-        height: 15vw;
+    .container{
+        justify-content: space-between;
+    }
+    .logo {
+        height: 10vw;        
+        padding: 5px;
     }
 
-    img:hover {
-        height: 15vw;
+    .logo:hover {
+        height: 10.5vw;
+    }
+    
+    .nav-toggle{
+        display: block;            
     }
 
-    .menu {
-        display: block;
+    .menu {       
         flex-direction: column;
-        background-color: #940303;
+        align-items: center;
+        background-color: #035394;        
+        padding: 0;
         position: fixed;
-        top: 60px;
-        left: 0;
-        right: 0;
-        z-index: 1;
+        top: 90px;      
+        left: 100%;
+        width: 100%;
+        margin: 0;
+        transition: left 0.3s;
+        z-index: 1000;
+    }
+    .menu > li > a {        
+        text-align: center;
+    }
+    .nav-menu_visible {
+        left: 0%;
+        transition: left 0.3s;
+        top: 10vw;
     }
 
-    .menu.active {
-        display: flex;
+    .submenu {
+      position: absolute;
+      background-color: #035394;
+      width: 100%;
+      left: 100%;
+      top: -125%;
+    }
+    .subsubmenu{
+        left: 100%;
+        background-color: #035394;
+    }
+    .menuGatos{
+        left: 100%;
+        background-color: #035394;
+    }
+    
+    .menuPerros{
+        left: 100%;
+        background-color: #035394;
+    }
+   
+    .menuGatos{
+        z-index: 1000;
+    }
+    .menuPerros{
+        z-index: 1000;
+    }
+    input{
+        display: none;
     }
 
-    .menu li {
-        margin: 10px 0;
-    }
+}
 
-    .nav-toggle {
-        display: block;
-        cursor: pointer;
+@media screen and (max-width: 576px){
+    
+    .menu {
+        top: 10vw;
     }
-
-    .bar {
-        width: 25px;
-        height: 3px;
-        background-color: #fff;
-        margin: 5px 0;
+    .nav-menu_visible{
+        top: 10vw;
     }
 }
