--- a/style.css
+++ b/style.css
@@ -3,331 +3,43 @@
     padding: 0px;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    background-color: #c6e4fc;
+    box-sizing: border-box;    
 }
-
-header {
-    display: flex;
-    flex-direction: column;    
+body{
+    background-color: #7aa2bd
 }
-
-.container {
-    display: flex;
-    align-items: center;
-}
-
-.logo {
-    height: 7vw;
-    margin-top: 0.5vw;
-    margin-left: 5vw;
-    padding: 10px;
-    transition: 0.8s;
-}
-.nav-toggle {
-  color: rgb(8, 85, 156);
-   background: none;
-   border: none;
-   font-size: 5vw;
-   padding: 0 20px;
-   line-height: 30px;
-   cursor: pointer;
-   display: none;
-}
-#buscador {
-    position: static;
-    outline: none;
-    margin-left: 4vw;
-    width: 35vw;
-    height: 2.5vw;
-    border: #94030362 2px solid;
-    border-radius: 50px;    
-    padding: 10px;
-    font-size: 1vw;
-    font-family: "Century Gothic",Verdana,sans-serif;
-}
-::placeholder{
-    padding: 0.1vw;
-    color: gray;
-    font-size: 1vw;
-    font-family: "Century Gothic",Verdana,sans-serif;
-    background-image: url(assets/search-interface-symbol\ \(1\).png);    
-    background-size: 1.2vw 1.2vw;
-    background-repeat: no-repeat;    
-    background-position: 97%;
-}
-.navegacion ul {
-    list-style: none;
-}
-
-
-/* Menú */
-.menu {
-    padding: 0.5vw;
-    display: flex;
-    justify-content: space-evenly;
-    background-color: #035394;
-}
-.menu>li {
-    position: relative;
-    display: inline-block;
-    margin-top: 0.5vw;  
-}
-.menu>li>a {
-    display: block;
-    padding: 5px;
-    margin-right: 2vw;
-    margin-left: 2vw;
-    margin-bottom: 0.5vw;
-    text-decoration: none;
-    font-family: "Century Gothic",Verdana,sans-serif;
-    font-size: 1vw;
-    font-weight: bold;
-    border-radius: 20px;
-    color: white;
-    transition: all 0.3s ease;
-    position: relative;
-    overflow: hidden;
-    text-align: center;
-    background-color: #035394;
-}
-.menu li:hover .submenu {
-    visibility: visible;
-    opacity: 1;
-}
-.menu a {
-    position: relative;
-    text-decoration: none;    
-    background-color: #035394;
-}
-.menu li {
-    background-color: #035394;
-}
-
-.menu li a::after {
-    content: "";
+iframe {
     position: absolute;
-    left: 15%;
-    bottom: 0px;
-    width: 70%;
-    height: 2px;
-    background-color: #ffffff;
-    transform: scaleX(0);
-    transform-origin: center;
-    transition: transform 0.3s ease;
+    z-index: 9999
 }
-.menu li a:hover::after {
-    transform: scaleX(1);
-}
-/* Fin de código Menú */
 
-
-/* SubMenú */
-.submenu {
-    position: absolute;    
-    background-color:#035394;
-    width: 110%;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 1s;
-    z-index: 1000;
-}
-.submenu>li>a {
-    display: block;
-    padding: 0.2vw;
-    padding-bottom: 0.5vw;
-    margin: 1.5vw;   
-    color: white;
-    font-size: 1vw;
-    font-weight: bold;
-    font-family: "Century Gothic",Verdana,sans-serif;
-    text-decoration: none;
-    text-align: center;
-    background-color: #035394;
-}
-.submenu li:hover .subsubmenu {
-    visibility: visible;
-    opacity: 1;
-}
-/* Fin de código SubMenú */
-
-
-/* SubSubMenú */
-.subsubmenu {
-    position: absolute;
-    background-color: #035394;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 1s;
-    left: 100%;
-    top: 0%;
-    z-index: 1000;
-}
-.subsubmenu>li>a {
-    display: block;
-    font-size: 1vw;
-    font-weight: bold;
-    padding: 0.2vw;
-    padding-bottom: 0.5vw;
-    margin: 1.5vw;
-    color: white;
-    font-family: "Century Gothic",Verdana,sans-serif;
-    text-decoration: none;
-    text-align: center;
-}
-/* Fin de código SubSubMenú */
-
-
-/* MenúPerros */
-.menuPerros {
-    position: absolute;
-    background-color: #035394;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 1s;
-    left: 100%;
-    top: 0%;
-    z-index: 1000;
-}
-.menuPerros>li>a {
-    display: block;
-    font-size: 1vw;
-    font-weight: bold;
-    padding: 0.2vw;
-    padding-bottom: 0.5vw;
-    margin: 1.5vw;
-    color: white;
-    font-family: "Century Gothic",Verdana,sans-serif;
-    text-decoration: none;
-    text-align: center;
-}
-#Perros:hover .menuPerros {
-    visibility: visible;
-    opacity: 1;
-}
-/* Fin de código MenúPerros */
-
-
-/* MenúGatos */
-.menuGatos {
-    position: absolute;
-    background-color: #035394;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 1s;
-    left: 100%;
-    top: 50%;
-    z-index: 1000;
-}
-.menuGatos>li>a {
-    display: block;
-    font-size: 1vw;
-    font-weight: bold;
-    padding: 0.2vw;
-    padding-bottom: 0.5vw;
-    margin: 1.5vw;   
-    color: white;
-    font-family: "Century Gothic",Verdana,sans-serif;
-    text-decoration: none;
-    text-align: center;
-}
-#Gatos:hover .menuGatos {
-    visibility: visible;
-    opacity: 1;
-}
-/* Fin de código MenúGatos */
-
-
-
-.banner-slider{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-}
-.imagenBanner {
-    width: 100%;
-}
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    grid-auto-rows: minmax(100px, auto);    
+    padding-top: 15%;
+  }
+ 
+ .portada h1{
+     color: rgb(255, 255, 255);
+     font-size: 3vw;
+     text-align: center;
+     padding: 8%;
+     margin: 10%;
+     filter: drop-shadow(2px 2px 2px rgba(2, 0, 0, 0.664));
+     background-color:  rgba(255, 255, 255, 0.267);  
+     border-radius: 5%;
+     transition: font-size 1s;
+ }
+ .portada h1:hover{
+    font-size: 3.1vw
+    ;
+ }
 
 
 
 @media screen and (max-width: 768px) {
    
-    .logo {
-        height: 14vw;        
-        padding: 5px;
-    }
-
-    .logo:hover {
-        height: 14.5vw;
-    }
-    
-    .nav-toggle{
-        display: block;            
-    }
-
-    .menu {       
-        flex-direction: column;
-        align-items: baseline;
-        background-color: #035394;        
-        padding: 0;
-        position: fixed;
-        top: 14vw;      
-        right: 100%;
-        width: 100%;
-        margin: 0;
-        transition: right 0.3s;
-        z-index: 1000;
-    }
-    .menu > li > a {        
-        text-align: center;
-        }
-    .nav-menu_visible {
-        right: 0%;
-        transition: right 0.3s;
-        top: 14vw;
-    }
-    .menu> li> a {
-        font-size: 2.5vw;
-    }
-
-    .submenu {
-      position: absolute;
-      background-color: #035394;
-      width: 100%;
-      left: 100%;
-      top: -85%;     
-      border-radius: 10%;
-    }
-  
-
-    .submenu li a {
-    font-size: 2vw;
-    }
-
-    .subsubmenu{
-        left: 100%;
-        background-color: #035394;
-    }
-
-    .menuGatos{
-        left: 100%;
-        background-color: #035394;
-    }
-    
-    .menuPerros{
-        left: 100%;
-        background-color: #035394;
-    }
-   
-    .menuGatos{
-        z-index: 1000;
-    }
-    .menuPerros{
-        z-index: 1000;
-    }
-    input{
-        display: none;
-    }
-
 }
 
