--- a/secciones/contactanos/contactanos.css
+++ b/secciones/contactanos/contactanos.css
@@ -5,7 +5,6 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;    
 }
-iframe {
-    position: absolute;
-    z-index: 9999
+section{
+    margin-top: 5vw;
 }
