--- a/style.css
+++ b/style.css
@@ -7,31 +7,52 @@
 body{
     background-color: #7aa2bd
 }
- iframe{
-    border: none;
- }
 
-.navbar {
-    position: fixed;    
-    top: 0;    
-}
-
-.navbar:hover {
-    z-index: 3;
-}
 
 .slider{
-    position: absolute;
+    display: flex;
+    width: 300%;
+    height: 300px;
+    margin-left: -100%;
+}
+.slider-container{
+    overflow: hidden;
+}
+    .slider-img{
+    display: block;
     width: 100%;
-    height: 60%;
-    margin-top: 12%;   
-}
+    height: auto;
+    object-fit: cover;
+    }   
 
-.slider__S{
-    margin-left: 0%;
-}
+    
+    .slider-btn{
+        position: absolute;
+        width: 4vw;
+        height: 4vw;
+        background: wheat;
+        top: 20vw;
+        font-size: 3vw;
+        font-weight: bold;
+        font-family: monospace;
+        text-align: center;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+    
+    .slider-btn:hover{
+        background-color: #7aa2bd;
+    }
+    
+    .slider-btn-right{
+    right: 10px;
+    }
+    
+    .slider-btn-left{
+    left: 10px;
+    }
+    
 
 @media screen and (max-width: 768px) {
 
 }
-
