--- a/secciones/navbar/navbar.css
+++ b/secciones/navbar/navbar.css
@@ -15,7 +15,7 @@ header {
 .container {
     display: flex;
     align-items: center;
-    backdrop-filter: blur(10px);
+    background-color: #7aa2bd
 }
 
 .logo {
