--- a/style.css
+++ b/style.css
@@ -28,20 +28,21 @@ body{
     
     .slider-btn{
         position: absolute;
-        width: 4vw;
-        height: 4vw;
-        background: wheat;
+        width: 2.5vw;
+        height: 2.5vw;
+        background: rgba(255, 255, 255, 0.295);
         top: 20vw;
-        font-size: 3vw;
+        font-size: 2vw;
         font-weight: bold;
         font-family: monospace;
         text-align: center;
         border-radius: 50%;
         cursor: pointer;
+        transition: background-color 0.5s;
     }
     
     .slider-btn:hover{
-        background-color: #7aa2bd;
+        background-color: #ffffff;
     }
     
     .slider-btn-right{
