--- a/secciones/productos/productos.css
+++ b/secciones/productos/productos.css
@@ -5,3 +5,48 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;    
 }
+
+
+.slider{
+    display: flex;
+    width: 300%;
+    height: 300px;
+    margin-left: -100%;
+}
+.slider-container{
+    overflow: hidden;
+}
+    .slider-img{
+    display: block;
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    }   
+
+    
+    .slider-btn{
+        position: absolute;
+        width: 2.5vw;
+        height: 2.5vw;
+        background: rgba(255, 255, 255, 0.295);
+        top: 20vw;
+        font-size: 2vw;
+        font-weight: bold;
+        font-family: monospace;
+        text-align: center;
+        border-radius: 50%;
+        cursor: pointer;
+        transition: background-color 0.5s;
+    }
+    
+    .slider-btn:hover{
+        background-color: #ffffff;
+    }
+    
+    .slider-btn-right{
+    right: 10px;
+    }
+    
+    .slider-btn-left{
+    left: 10px;
+    }
