--- a/secciones/nosotros/nosotros.css
+++ b/secciones/nosotros/nosotros.css
@@ -5,3 +5,8 @@
     -webkit-box-sizing: border-box;
     box-sizing: border-box;    
 }
+header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
