--- a/secciones/nosotros/nosotros.css
+++ b/secciones/nosotros/nosotros.css
@@ -10,3 +10,47 @@ header{
     top: 0;
     width: 100%;
 }
+body{
+    background-color: #bbcdda
+}
+h2{
+    color: rgb(255, 255, 255);
+    font-size: 50px;
+    padding: 20px;
+    margin: 10px;
+    font-family: "Century Gothic", sans-serif;
+    text-align: left;
+}
+    
+p{
+    margin-bottom: 20px;
+    padding: 10px;
+    text-align: justify;
+    font-size: 20px;
+}
+
+#Nosotros {
+    margin-top: 15%;
+    margin-bottom: 15%;
+    margin-right: 5%;
+    margin-left: 5%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;  
+    justify-content: space-between;
+}
+  
+#Nosotros > div {
+    width: 100%;
+}
+
+.historia, .qs {
+    padding: 15px;
+    background-color: rgba(6, 104, 252, 0.199);
+    border-radius: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;  
+}
+
